gcc/gcc/testsuite/algol60.dg/fail/ifstmt1.a60
'comment' { dg-do compile } ;
'begin'
  'integer' a;
  'Boolean' b, c;
  'comment' { dg-error "type mismatch" } ; 'if' a 'then'
    a := 4;
'end';
